bison.output
Terminals which are not used

   DoubleQuote
   Underscore
   Letter
   SingleQuote
   Error
   Corchete
   Prec1


Grammar

    0 $accept: Start "end of file"

    1 Start: CompilationUnit

    2 CompilationUnit: /* empty */
    3                | TypeDeclarations

    4 Literal: IntegerLiteral
    5        | FloatingPointLiteral
    6        | CharLiteral
    7        | StringLiteral
    8        | TrueOrFalse

    9 Type: PrimitiveType
   10     | ReferenceType

   11 PrimitiveType: NumericType
   12              | Boolean

   13 NumericType: IntegralType
   14            | Float

   15 IntegralType: Int
   16             | Char
   17             | error PuntoComa

   18 ReferenceType: ClassType
   19              | ArrayType

   20 ClassType: Name

   21 ArrayType: PrimitiveType OpenCorchete CloseCorchete
   22          | Name OpenCorchete CloseCorchete
   23          | error OpenCorchete CloseCorchete
   24          | Name error CloseCorchete
   25          | PrimitiveType error CloseCorchete
   26          | Name OpenCorchete error PuntoComa
   27          | PrimitiveType OpenCorchete error PuntoComa

   28 Name: Identifier
   29     | QualifiedName

   30 QualifiedName: Name punto Identifier
   31              | Name punto error PuntoComa

   32 TypeDeclarations: TypeDeclaration
   33                 | TypeDeclarations TypeDeclaration

   34 TypeDeclaration: ClassDeclaration
   35                | PuntoComa

   36 Modifiers: Modifier
   37          | Modifiers Modifier

   38 Modifier: modifier

   39 ClassDeclaration: Modifiers Class Identifier Super ClassBody
   40                 | Modifiers Class Identifier ClassBody
   41                 | Modifiers error Identifier ClassBody
   42                 | Modifiers Class error ClassBody
   43                 | error Class Identifier ClassBody
   44                 | Modifiers error Identifier Super ClassBody
   45                 | Modifiers Class error Super ClassBody
   46                 | error Class Identifier Super ClassBody
   47                 | Modifiers Class Identifier error ClassBody
   48                 | Modifiers Identifier Identifier ClassBody

   49 Super: Extends ClassType

   50 ClassBody: OpenLlave ClassBodyDeclarations CloseLlave
   51          | OpenLlave ClassBodyDeclarations error "end of file"
   52          | ClassBodyDeclarations CloseLlave

   53 ClassBodyDeclarations: ClassBodyDeclaration
   54                      | ClassBodyDeclarations ClassBodyDeclaration

   55 ClassBodyDeclaration: ClassMemberDeclaration
   56                     | ConstructorDeclaration

   57 ClassMemberDeclaration: FieldDeclaration
   58                       | MethodDeclaration

   59 FieldDeclaration: Modifiers Type VariableDeclarators PuntoComa
   60                 | Type VariableDeclarators PuntoComa
   61                 | Modifiers Type PuntoComa

   62 VariableDeclarators: VariableDeclarator
   63                    | VariableDeclarators Coma VariableDeclarator

   64 VariableDeclarator: VariableDeclaratorId
   65                   | VariableDeclaratorId Equals VariableInitializer
   66                   | VariableDeclaratorId error VariableInitializer

   67 VariableDeclaratorId: Identifier
   68                     | VariableDeclaratorId OpenCorchete CloseCorchete
   69                     | VariableDeclaratorId CloseCorchete
   70                     | VariableDeclaratorId OpenCorchete error PuntoComa

   71 VariableInitializer: Expr

   72 MethodDeclaration: MethodHeader MethodBody

   73 MethodHeader: Modifiers Type MethodDeclarator
   74             | Type MethodDeclarator
   75             | Modifiers Void MethodDeclarator
   76             | Void MethodDeclarator

   77 MethodDeclarator: Identifier OpenParentesis FormalParameterList CloseParentesis
   78                 | Identifier OpenParentesis CloseParentesis
   79                 | MethodDeclarator OpenCorchete CloseCorchete

   80 FormalParameterList: FormalParameter
   81                    | FormalParameterList Coma FormalParameter
   82                    | FormalParameterList error FormalParameter

   83 FormalParameter: Type VariableDeclaratorId

   84 MethodBody: Block
   85           | PuntoComa

   86 ConstructorDeclaration: Modifiers ConstructorDeclarator ConstructorBody
   87                       | ConstructorDeclarator ConstructorBody

   88 ConstructorDeclarator: Identifier OpenParentesis FormalParameterList CloseParentesis
   89                      | Identifier OpenParentesis CloseParentesis
   90                      | error OpenParentesis FormalParameterList CloseParentesis
   91                      | Identifier OpenParentesis FormalParameterList error OpenLlave
   92                      | Identifier CloseParentesis

   93 ConstructorBody: OpenLlave ExplicitConstructorInvocation BlockStmts CloseLlave
   94                | OpenLlave ExplicitConstructorInvocation CloseLlave
   95                | OpenLlave BlockStmts CloseLlave
   96                | OpenLlave CloseLlave
   97                | error CloseLlave
   98                | error ExplicitConstructorInvocation CloseLlave
   99                | error BlockStmts CloseLlave
  100                | error ExplicitConstructorInvocation BlockStmts CloseLlave
  101                | OpenLlave error "end of file"
  102                | OpenLlave ExplicitConstructorInvocation error "end of file"
  103                | OpenLlave BlockStmts error "end of file"
  104                | OpenLlave ExplicitConstructorInvocation BlockStmts error "end of file"

  105 ExplicitConstructorInvocation: This OpenParentesis ArgumentList CloseParentesis PuntoComa
  106                              | This OpenParentesis CloseParentesis PuntoComa
  107                              | super OpenParentesis ArgumentList CloseParentesis PuntoComa
  108                              | super OpenParentesis CloseParentesis PuntoComa
  109                              | super error CloseParentesis PuntoComa
  110                              | super OpenParentesis error PuntoComa
  111                              | super error ArgumentList CloseParentesis PuntoComa
  112                              | super OpenParentesis ArgumentList error PuntoComa
  113                              | super OpenParentesis ArgumentList CloseParentesis error CloseLlave
  114                              | super OpenParentesis CloseParentesis error CloseLlave
  115                              | This error CloseParentesis PuntoComa
  116                              | This OpenParentesis error PuntoComa
  117                              | This error ArgumentList CloseParentesis PuntoComa
  118                              | This OpenParentesis ArgumentList error PuntoComa
  119                              | This OpenParentesis ArgumentList CloseParentesis error CloseLlave
  120                              | This OpenParentesis CloseParentesis error CloseLlave

  121 Block: OpenLlave BlockStmts CloseLlave
  122      | OpenLlave CloseLlave
  123      | error CloseLlave
  124      | OpenLlave BlockStmts error "end of file"
  125      | OpenLlave error "end of file"

  126 BlockStmts: BlockStmt
  127           | BlockStmts BlockStmt

  128 BlockStmt: LocalVariableDeclarationStmt
  129          | Stmt

  130 LocalVariableDeclarationStmt: LocalVariableDeclaration PuntoComa

  131 LocalVariableDeclaration: Type VariableDeclarators

  132 Stmt: StmtNoTrailingSubstatement
  133     | IfThenStmt
  134     | IfThenElseStmt
  135     | WhileStmt
  136     | ForStmt

  137 StmtNoShortIf: StmtNoTrailingSubstatement
  138              | IfThenElseStmtNoShortIf
  139              | WhileStmtNoShortIf
  140              | ForStmtNoShortIf

  141 StmtNoTrailingSubstatement: Block
  142                           | EmptyStmt
  143                           | ExprStmt
  144                           | SwitchStmt
  145                           | DoStmt
  146                           | BreakStmt
  147                           | ContinueStmt
  148                           | ReturnStmt

  149 EmptyStmt: PuntoComa

  150 ExprStmt: StmtExpr PuntoComa
  151         | StmtExpr error

  152 StmtExpr: Assignment
  153         | PreIncrementExpr
  154         | PreDecrementExpr
  155         | PostIncrementExpr
  156         | PostDecrementExpr
  157         | MethodInvocation
  158         | ClassInstanceCreationExpr

  159 IfThenStmt: If OpenParentesis Expr CloseParentesis Stmt
  160           | If error Expr CloseParentesis Stmt
  161           | If OpenParentesis Expr error Stmt
  162           | If OpenParentesis error CloseParentesis Stmt
  163           | If error CloseParentesis Stmt

  164 IfThenElseStmt: If OpenParentesis Expr CloseParentesis StmtNoShortIf Else Stmt
  165               | If error Expr CloseParentesis StmtNoShortIf Else Stmt
  166               | If OpenParentesis Expr error StmtNoShortIf Else Stmt
  167               | If OpenParentesis error CloseParentesis StmtNoShortIf Else Stmt
  168               | If error CloseParentesis StmtNoShortIf Else Stmt
  169               | If error Else Stmt

  170 IfThenElseStmtNoShortIf: If OpenParentesis Expr CloseParentesis StmtNoShortIf Else StmtNoShortIf
  171                        | If error Expr CloseParentesis StmtNoShortIf Else StmtNoShortIf
  172                        | If OpenParentesis Expr error StmtNoShortIf Else StmtNoShortIf
  173                        | If OpenParentesis error CloseParentesis StmtNoShortIf Else StmtNoShortIf
  174                        | If error CloseParentesis StmtNoShortIf Else StmtNoShortIf

  175 SwitchStmt: Switch OpenParentesis Expr CloseParentesis SwitchBlock
  176           | Switch error Expr CloseParentesis SwitchBlock
  177           | Switch OpenParentesis Expr error SwitchBlock
  178           | Switch OpenParentesis error CloseParentesis SwitchBlock
  179           | Switch error CloseParentesis SwitchBlock
  180           | Switch error SwitchBlock

  181 SwitchBlock: OpenLlave SwitchBlockStmtGroups SwitchLabels CloseLlave
  182            | OpenLlave SwitchBlockStmtGroups CloseLlave
  183            | OpenLlave SwitchLabels CloseLlave
  184            | OpenLlave CloseLlave
  185            | error SwitchBlockStmtGroups SwitchLabels CloseLlave
  186            | error SwitchBlockStmtGroups CloseLlave
  187            | error SwitchLabels CloseLlave
  188            | error CloseLlave
  189            | OpenLlave SwitchBlockStmtGroups SwitchLabels error "end of file"
  190            | OpenLlave SwitchLabels error "end of file"
  191            | OpenLlave error "end of file"
  192            | OpenLlave error CloseLlave

  193 SwitchBlockStmtGroups: SwitchBlockStmtGroup
  194                      | SwitchBlockStmtGroups SwitchBlockStmtGroup

  195 SwitchBlockStmtGroup: SwitchLabels BlockStmts

  196 SwitchLabels: SwitchLabel
  197             | SwitchLabels SwitchLabel

  198 SwitchLabel: Case ConstantExpr DosPtos
  199            | Default DosPtos
  200            | Default error PuntoComa
  201            | Case error DosPtos
  202            | Case ConstantExpr error PuntoComa

  203 WhileStmt: While OpenParentesis Expr CloseParentesis Stmt
  204          | While error Expr CloseParentesis Stmt
  205          | While OpenParentesis Expr error Stmt
  206          | While OpenParentesis error CloseParentesis Stmt
  207          | While error CloseParentesis Stmt

  208 WhileStmtNoShortIf: While OpenParentesis Expr CloseParentesis StmtNoShortIf
  209                   | While error Expr CloseParentesis StmtNoShortIf
  210                   | While OpenParentesis Expr error StmtNoShortIf
  211                   | While OpenParentesis error CloseParentesis StmtNoShortIf
  212                   | While error CloseParentesis StmtNoShortIf

  213 DoStmt: Do Stmt While OpenParentesis Expr CloseParentesis PuntoComa
  214       | Do Stmt While error Expr CloseParentesis PuntoComa
  215       | Do Stmt While OpenParentesis Expr error PuntoComa
  216       | Do Stmt While OpenParentesis error CloseParentesis PuntoComa
  217       | Do Stmt While error CloseParentesis PuntoComa
  218       | Do error While OpenParentesis Expr CloseParentesis PuntoComa
  219       | Do Stmt error OpenParentesis Expr CloseParentesis PuntoComa
  220       | Do Stmt While OpenParentesis Expr CloseParentesis error OpenLlave
  221       | Do Stmt error Expr CloseParentesis PuntoComa
  222       | Do error PuntoComa

  223 ForStmt: For OpenParentesis ForInit PuntoComa Expr PuntoComa ForUpdate CloseParentesis Stmt
  224        | For OpenParentesis ForInit PuntoComa Expr PuntoComa CloseParentesis Stmt
  225        | For OpenParentesis ForInit PuntoComa PuntoComa ForUpdate CloseParentesis Stmt
  226        | For OpenParentesis ForInit PuntoComa PuntoComa CloseParentesis Stmt
  227        | For OpenParentesis PuntoComa Expr PuntoComa ForUpdate CloseParentesis Stmt
  228        | For OpenParentesis PuntoComa Expr PuntoComa CloseParentesis Stmt
  229        | For OpenParentesis PuntoComa PuntoComa ForUpdate CloseParentesis Stmt
  230        | For OpenParentesis PuntoComa PuntoComa CloseParentesis Stmt
  231        | For OpenParentesis PuntoComa error CloseParentesis Stmt
  232        | For OpenParentesis PuntoComa PuntoComa error CloseParentesis Stmt
  233        | For OpenParentesis PuntoComa error PuntoComa CloseParentesis Stmt
  234        | For OpenParentesis error PuntoComa PuntoComa CloseParentesis Stmt

  235 ForStmtNoShortIf: For OpenParentesis ForInit PuntoComa Expr PuntoComa ForUpdate CloseParentesis StmtNoShortIf
  236                 | For OpenParentesis ForInit PuntoComa Expr PuntoComa CloseParentesis StmtNoShortIf
  237                 | For OpenParentesis ForInit PuntoComa PuntoComa ForUpdate CloseParentesis StmtNoShortIf
  238                 | For OpenParentesis ForInit PuntoComa PuntoComa CloseParentesis StmtNoShortIf
  239                 | For OpenParentesis PuntoComa Expr PuntoComa ForUpdate CloseParentesis StmtNoShortIf
  240                 | For OpenParentesis PuntoComa Expr PuntoComa CloseParentesis StmtNoShortIf
  241                 | For OpenParentesis PuntoComa PuntoComa ForUpdate CloseParentesis StmtNoShortIf
  242                 | For OpenParentesis PuntoComa PuntoComa CloseParentesis StmtNoShortIf
  243                 | For OpenParentesis PuntoComa error CloseParentesis StmtNoShortIf
  244                 | For OpenParentesis PuntoComa PuntoComa error CloseParentesis StmtNoShortIf
  245                 | For OpenParentesis PuntoComa error PuntoComa CloseParentesis StmtNoShortIf
  246                 | For OpenParentesis error PuntoComa PuntoComa CloseParentesis StmtNoShortIf

  247 ForInit: StmtExprList
  248        | LocalVariableDeclaration

  249 ForUpdate: StmtExprList

  250 StmtExprList: StmtExpr
  251             | StmtExprList Coma StmtExpr

  252 BreakStmt: Break PuntoComa
  253          | Break error CloseLlave

  254 ContinueStmt: Continue PuntoComa

  255 ReturnStmt: Return Expr PuntoComa
  256           | Return PuntoComa

  257 Primary: PrimaryNoNewArray
  258        | ArrayCreationExpr

  259 PrimaryNoNewArray: Literal
  260                  | This
  261                  | OpenParentesis Expr CloseParentesis
  262                  | ClassInstanceCreationExpr
  263                  | FieldAccess
  264                  | MethodInvocation
  265                  | ArrayAccess

  266 ClassInstanceCreationExpr: New ClassType OpenParentesis ArgumentList CloseParentesis
  267                          | New ClassType OpenParentesis CloseParentesis

  268 ArgumentList: Expr
  269             | ArgumentList Coma Expr
  270             | error Coma Expr
  271             | ArgumentList error Expr

  272 ArrayCreationExpr: New PrimitiveType DimExprs Dims
  273                  | New PrimitiveType DimExprs
  274                  | New ClassType DimExprs Dims
  275                  | New ClassType DimExprs
  276                  | New PrimitiveType error
  277                  | New ClassType error
  278                  | New error DimExprs

  279 DimExprs: DimExpr
  280         | DimExprs DimExpr

  281 DimExpr: OpenCorchete Expr CloseCorchete
  282        | OpenCorchete error CloseCorchete

  283 Dims: OpenCorchete CloseCorchete
  284     | Dims OpenCorchete CloseCorchete

  285 FieldAccess: Primary punto Identifier
  286            | super punto Identifier

  287 MethodInvocation: Name OpenParentesis ArgumentList CloseParentesis
  288                 | Name OpenParentesis CloseParentesis
  289                 | Primary punto Identifier OpenParentesis ArgumentList CloseParentesis
  290                 | Primary punto Identifier OpenParentesis CloseParentesis
  291                 | super punto Identifier OpenParentesis ArgumentList CloseParentesis
  292                 | super punto Identifier OpenParentesis CloseParentesis
  293                 | Primary punto error CloseParentesis

  294 ArrayAccess: Name OpenCorchete Expr CloseCorchete
  295            | PrimaryNoNewArray OpenCorchete Expr CloseCorchete

  296 PostfixExpr: Primary
  297            | Name
  298            | PostIncrementExpr
  299            | PostDecrementExpr

  300 PostIncrementExpr: PostfixExpr PlusPlus

  301 PostDecrementExpr: PostfixExpr MinusMinus

  302 UnaryExpr: PreIncrementExpr
  303          | PreDecrementExpr
  304          | AddOp UnaryExpr
  305          | UnaryExprNotPlusMinus

  306 PreIncrementExpr: PlusPlus UnaryExpr

  307 PreDecrementExpr: MinusMinus UnaryExpr

  308 UnaryExprNotPlusMinus: PostfixExpr
  309                      | Not UnaryExpr
  310                      | CastExpr

  311 CastExpr: OpenParentesis PrimitiveType Dims CloseParentesis UnaryExpr
  312         | OpenParentesis PrimitiveType CloseParentesis UnaryExpr
  313         | OpenParentesis Expr CloseParentesis UnaryExprNotPlusMinus
  314         | OpenParentesis Name Dims CloseParentesis UnaryExprNotPlusMinus
  315         | OpenParentesis PrimitiveType Dims error UnaryExpr
  316         | OpenParentesis PrimitiveType error UnaryExpr

  317 MultiplicativeExpr: UnaryExpr
  318                   | MultiplicativeExpr MultOp UnaryExpr

  319 AdditiveExpr: MultiplicativeExpr
  320             | AdditiveExpr AddOp MultiplicativeExpr

  321 RelationalExpr: AdditiveExpr
  322               | RelationalExpr Relacion AdditiveExpr

  323 EqualityExpr: RelationalExpr
  324             | EqualityExpr Igualdad RelationalExpr

  325 AndExpr: EqualityExpr
  326        | AndExpr And EqualityExpr

  327 ExclusiveOrExpr: AndExpr
  328                | ExclusiveOrExpr Tongo AndExpr

  329 InclusiveOrExpr: ExclusiveOrExpr
  330                | InclusiveOrExpr Or ExclusiveOrExpr

  331 ConditionalAndExpr: InclusiveOrExpr
  332                   | ConditionalAndExpr AndAnd InclusiveOrExpr

  333 ConditionalOrExpr: ConditionalAndExpr
  334                  | ConditionalOrExpr OrOr ConditionalAndExpr

  335 ConditionalExpr: ConditionalOrExpr

  336 AssignmentExpr: ConditionalExpr
  337               | Assignment

  338 Assignment: LeftHandSide AssignmentOperator AssignmentExpr

  339 LeftHandSide: Name
  340             | FieldAccess
  341             | ArrayAccess

  342 AssignmentOperator: Equals
  343                   | variableDeclarator

  344 Expr: AssignmentExpr

  345 ConstantExpr: Expr


Terminals, with rules where they appear

"end of file" (0) 0 51 101 102 103 104 124 125 189 190 191
error (256) 17 23 24 25 26 27 31 41 42 43 44 45 46 47 51 66 70 82 90
    91 97 98 99 100 101 102 103 104 109 110 111 112 113 114 115 116
    117 118 119 120 123 124 125 151 160 161 162 163 165 166 167 168
    169 171 172 173 174 176 177 178 179 180 185 186 187 188 189 190
    191 192 200 201 202 204 205 206 207 209 210 211 212 214 215 216
    217 218 219 220 221 222 231 232 233 234 243 244 245 246 253 270
    271 276 277 278 282 293 315 316
Identifier (258) 28 30 39 40 41 43 44 46 47 48 67 77 78 88 89 91 92
    285 286 289 290 291 292
StringLiteral (259) 7
FloatingPointLiteral (260) 5
CharLiteral (261) 6
IntegerLiteral (262) 4
DoubleQuote (263)
Underscore (264)
Letter (265)
SingleQuote (266)
Error (267)
TrueOrFalse (268) 8
Boolean (269) 12
Float (270) 14
Int (271) 15
Char (272) 16
Corchete (273)
punto (274) 30 31 285 286 289 290 291 292 293
Class (275) 39 40 42 43 45 46 47
Extends (276) 49
OpenLlave (277) 50 51 91 93 94 95 96 101 102 103 104 121 122 124 125
    181 182 183 184 189 190 191 192 220
CloseLlave (278) 50 52 93 94 95 96 97 98 99 100 113 114 119 120 121
    122 123 181 182 183 184 185 186 187 188 192 253
Coma (279) 63 81 251 269 270
PuntoComa (280) 17 26 27 31 35 59 60 61 70 85 105 106 107 108 109 110
    111 112 115 116 117 118 130 149 150 200 202 213 214 215 216 217
    218 219 221 222 223 224 225 226 227 228 229 230 231 232 233 234
    235 236 237 238 239 240 241 242 243 244 245 246 252 254 255 256
variableDeclarator (281) 343
Void (282) 75 76
OpenParentesis (283) 77 78 88 89 90 91 105 106 107 108 110 112 113
    114 116 118 119 120 159 161 162 164 166 167 170 172 173 175 177
    178 203 205 206 208 210 211 213 215 216 218 219 220 223 224 225
    226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241
    242 243 244 245 246 261 266 267 287 288 289 290 291 292 311 312
    313 314 315 316
This (284) 105 106 115 116 117 118 119 120 260
If (285) 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173
    174
Else (286) 164 165 166 167 168 169 170 171 172 173 174
Switch (287) 175 176 177 178 179 180
Case (288) 198 201 202
Default (289) 199 200
DosPtos (290) 198 199 201
While (291) 203 204 205 206 207 208 209 210 211 212 213 214 215 216
    217 218 220
Do (292) 213 214 215 216 217 218 219 220 221 222
For (293) 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237
    238 239 240 241 242 243 244 245 246
Break (294) 252 253
Continue (295) 254
Return (296) 255 256
New (297) 266 267 272 273 274 275 276 277 278
AddOp (298) 304 320
Not (299) 309
MultOp (300) 318
And (301) 326
Or (302) 330
Tongo (303) 328
OpenCorchete (304) 21 22 23 26 27 68 70 79 281 282 283 284 294 295
CloseCorchete (305) 21 22 23 24 25 68 69 79 281 282 283 284 294 295
super (306) 107 108 109 110 111 112 113 114 286 291 292
modifier (307) 38
CloseParentesis (308) 77 78 88 89 90 92 105 106 107 108 109 111 113
    114 115 117 119 120 159 160 162 163 164 165 167 168 170 171 173
    174 175 176 178 179 203 204 206 207 208 209 211 212 213 214 216
    217 218 219 220 221 223 224 225 226 227 228 229 230 231 232 233
    234 235 236 237 238 239 240 241 242 243 244 245 246 261 266 267
    287 288 289 290 291 292 293 311 312 313 314
Equals (309) 65 342
Relacion (310) 322
Igualdad (311) 324
OrOr (312) 334
AndAnd (313) 332
PlusPlus (314) 300 306
MinusMinus (315) 301 307
Prec1 (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
Start (63)
    on left: 1, on right: 0
CompilationUnit (64)
    on left: 2 3, on right: 1
Literal (65)
    on left: 4 5 6 7 8, on right: 259
Type (66)
    on left: 9 10, on right: 59 60 61 73 74 83 131
PrimitiveType (67)
    on left: 11 12, on right: 9 21 25 27 272 273 276 311 312 315 316
NumericType (68)
    on left: 13 14, on right: 11
IntegralType (69)
    on left: 15 16 17, on right: 13
ReferenceType (70)
    on left: 18 19, on right: 10
ClassType (71)
    on left: 20, on right: 18 49 266 267 274 275 277
ArrayType (72)
    on left: 21 22 23 24 25 26 27, on right: 19
Name (73)
    on left: 28 29, on right: 20 22 24 26 30 31 287 288 294 297 314
    339
QualifiedName (74)
    on left: 30 31, on right: 29
TypeDeclarations (75)
    on left: 32 33, on right: 3 33
TypeDeclaration (76)
    on left: 34 35, on right: 32 33
Modifiers (77)
    on left: 36 37, on right: 37 39 40 41 42 44 45 47 48 59 61 73 75
    86
Modifier (78)
    on left: 38, on right: 36 37
ClassDeclaration (79)
    on left: 39 40 41 42 43 44 45 46 47 48, on right: 34
Super (80)
    on left: 49, on right: 39 44 45 46
ClassBody (81)
    on left: 50 51 52, on right: 39 40 41 42 43 44 45 46 47 48
ClassBodyDeclarations (82)
    on left: 53 54, on right: 50 51 52 54
ClassBodyDeclaration (83)
    on left: 55 56, on right: 53 54
ClassMemberDeclaration (84)
    on left: 57 58, on right: 55
FieldDeclaration (85)
    on left: 59 60 61, on right: 57
VariableDeclarators (86)
    on left: 62 63, on right: 59 60 63 131
VariableDeclarator (87)
    on left: 64 65 66, on right: 62 63
VariableDeclaratorId (88)
    on left: 67 68 69 70, on right: 64 65 66 68 69 70 83
VariableInitializer (89)
    on left: 71, on right: 65 66
MethodDeclaration (90)
    on left: 72, on right: 58
MethodHeader (91)
    on left: 73 74 75 76, on right: 72
MethodDeclarator (92)
    on left: 77 78 79, on right: 73 74 75 76 79
FormalParameterList (93)
    on left: 80 81 82, on right: 77 81 82 88 90 91
FormalParameter (94)
    on left: 83, on right: 80 81 82
MethodBody (95)
    on left: 84 85, on right: 72
ConstructorDeclaration (96)
    on left: 86 87, on right: 56
ConstructorDeclarator (97)
    on left: 88 89 90 91 92, on right: 86 87
ConstructorBody (98)
    on left: 93 94 95 96 97 98 99 100 101 102 103 104,
    on right: 86 87
ExplicitConstructorInvocation (99)
    on left: 105 106 107 108 109 110 111 112 113 114 115 116 117 118
    119 120, on right: 93 94 98 100 102 104
Block (100)
    on left: 121 122 123 124 125, on right: 84 141
BlockStmts (101)
    on left: 126 127, on right: 93 95 99 100 103 104 121 124 127 195
BlockStmt (102)
    on left: 128 129, on right: 126 127
LocalVariableDeclarationStmt (103)
    on left: 130, on right: 128
LocalVariableDeclaration (104)
    on left: 131, on right: 130 248
Stmt (105)
    on left: 132 133 134 135 136, on right: 129 159 160 161 162 163
    164 165 166 167 168 169 203 204 205 206 207 213 214 215 216 217
    219 220 221 223 224 225 226 227 228 229 230 231 232 233 234
StmtNoShortIf (106)
    on left: 137 138 139 140, on right: 164 165 166 167 168 170 171
    172 173 174 208 209 210 211 212 235 236 237 238 239 240 241 242
    243 244 245 246
StmtNoTrailingSubstatement (107)
    on left: 141 142 143 144 145 146 147 148, on right: 132 137
EmptyStmt (108)
    on left: 149, on right: 142
ExprStmt (109)
    on left: 150 151, on right: 143
StmtExpr (110)
    on left: 152 153 154 155 156 157 158, on right: 150 151 250 251
IfThenStmt (111)
    on left: 159 160 161 162 163, on right: 133
IfThenElseStmt (112)
    on left: 164 165 166 167 168 169, on right: 134
IfThenElseStmtNoShortIf (113)
    on left: 170 171 172 173 174, on right: 138
SwitchStmt (114)
    on left: 175 176 177 178 179 180, on right: 144
SwitchBlock (115)
    on left: 181 182 183 184 185 186 187 188 189 190 191 192,
    on right: 175 176 177 178 179 180
SwitchBlockStmtGroups (116)
    on left: 193 194, on right: 181 182 185 186 189 194
SwitchBlockStmtGroup (117)
    on left: 195, on right: 193 194
SwitchLabels (118)
    on left: 196 197, on right: 181 183 185 187 189 190 195 197
SwitchLabel (119)
    on left: 198 199 200 201 202, on right: 196 197
WhileStmt (120)
    on left: 203 204 205 206 207, on right: 135
WhileStmtNoShortIf (121)
    on left: 208 209 210 211 212, on right: 139
DoStmt (122)
    on left: 213 214 215 216 217 218 219 220 221 222,
    on right: 145
ForStmt (123)
    on left: 223 224 225 226 227 228 229 230 231 232 233 234,
    on right: 136
ForStmtNoShortIf (124)
    on left: 235 236 237 238 239 240 241 242 243 244 245 246,
    on right: 140
ForInit (125)
    on left: 247 248, on right: 223 224 225 226 235 236 237 238
ForUpdate (126)
    on left: 249, on right: 223 225 227 229 235 237 239 241
StmtExprList (127)
    on left: 250 251, on right: 247 249 251
BreakStmt (128)
    on left: 252 253, on right: 146
ContinueStmt (129)
    on left: 254, on right: 147
ReturnStmt (130)
    on left: 255 256, on right: 148
Primary (131)
    on left: 257 258, on right: 285 289 290 293 296
PrimaryNoNewArray (132)
    on left: 259 260 261 262 263 264 265, on right: 257 295
ClassInstanceCreationExpr (133)
    on left: 266 267, on right: 158 262
ArgumentList (134)
    on left: 268 269 270 271, on right: 105 107 111 112 113 117 118
    119 266 269 271 287 289 291
ArrayCreationExpr (135)
    on left: 272 273 274 275 276 277 278, on right: 258
DimExprs (136)
    on left: 279 280, on right: 272 273 274 275 278 280
DimExpr (137)
    on left: 281 282, on right: 279 280
Dims (138)
    on left: 283 284, on right: 272 274 284 311 314 315
FieldAccess (139)
    on left: 285 286, on right: 263 340
MethodInvocation (140)
    on left: 287 288 289 290 291 292 293, on right: 157 264
ArrayAccess (141)
    on left: 294 295, on right: 265 341
PostfixExpr (142)
    on left: 296 297 298 299, on right: 300 301 308
PostIncrementExpr (143)
    on left: 300, on right: 155 298
PostDecrementExpr (144)
    on left: 301, on right: 156 299
UnaryExpr (145)
    on left: 302 303 304 305, on right: 304 306 307 309 311 312 315
    316 317 318
PreIncrementExpr (146)
    on left: 306, on right: 153 302
PreDecrementExpr (147)
    on left: 307, on right: 154 303
UnaryExprNotPlusMinus (148)
    on left: 308 309 310, on right: 305 313 314
CastExpr (149)
    on left: 311 312 313 314 315 316, on right: 310
MultiplicativeExpr (150)
    on left: 317 318, on right: 318 319 320
AdditiveExpr (151)
    on left: 319 320, on right: 320 321 322
RelationalExpr (152)
    on left: 321 322, on right: 322 323 324
EqualityExpr (153)
    on left: 323 324, on right: 324 325 326
AndExpr (154)
    on left: 325 326, on right: 326 327 328
ExclusiveOrExpr (155)
    on left: 327 328, on right: 328 329 330
InclusiveOrExpr (156)
    on left: 329 330, on right: 330 331 332
ConditionalAndExpr (157)
    on left: 331 332, on right: 332 333 334
ConditionalOrExpr (158)
    on left: 333 334, on right: 334 335
ConditionalExpr (159)
    on left: 335, on right: 336
AssignmentExpr (160)
    on left: 336 337, on right: 338 344
Assignment (161)
    on left: 338, on right: 152 337
LeftHandSide (162)
    on left: 339 340 341, on right: 338
AssignmentOperator (163)
    on left: 342 343, on right: 338
Expr (164)
    on left: 344, on right: 71 159 160 161 164 165 166 170 171 172
    175 176 177 203 204 205 208 209 210 213 214 215 218 219 220 221
    223 224 227 228 235 236 239 240 255 261 268 269 270 271 281 294
    295 313 345
ConstantExpr (165)
    on left: 345, on right: 198 202


state 0

    0 $accept: . Start "end of file"

    error      shift, and go to state 1
    PuntoComa  shift, and go to state 2
    modifier   shift, and go to state 3

    "end of file"  reduce using rule 2 (CompilationUnit)

    Start             go to state 4
    CompilationUnit   go to state 5
    TypeDeclarations  go to state 6
    TypeDeclaration   go to state 7
    Modifiers         go to state 8
    Modifier          go to state 9
    ClassDeclaration  go to state 10


state 1

   43 ClassDeclaration: error . Class Identifier ClassBody
   46                 | error . Class Identifier Super ClassBody

    Class  shift, and go to state 11


state 2

   35 TypeDeclaration: PuntoComa .

    $default  reduce using rule 35 (TypeDeclaration)


state 3

   38 Modifier: modifier .

    $default  reduce using rule 38 (Modifier)


state 4

    0 $accept: Start . "end of file"

    "end of file"  shift, and go to state 12


state 5

    1 Start: CompilationUnit .

    $default  reduce using rule 1 (Start)


state 6

    3 CompilationUnit: TypeDeclarations .
   33 TypeDeclarations: TypeDeclarations . TypeDeclaration

    error      shift, and go to state 1
    PuntoComa  shift, and go to state 2
    modifier   shift, and go to state 3

    "end of file"  reduce using rule 3 (CompilationUnit)

    TypeDeclaration   go to state 13
    Modifiers         go to state 8
    Modifier          go to state 9
    ClassDeclaration  go to state 10


state 7

   32 TypeDeclarations: TypeDeclaration .

    $default  reduce using rule 32 (TypeDeclarations)


state 8

   37 Modifiers: Modifiers . Modifier
   39 ClassDeclaration: Modifiers . Class Identifier Super ClassBody
   40                 | Modifiers . Class Identifier ClassBody
   41                 | Modifiers . error Identifier ClassBody
   42                 | Modifiers . Class error ClassBody
   44                 | Modifiers . error Identifier Super ClassBody
   45                 | Modifiers . Class error Super ClassBody
   47                 | Modifiers . Class Identifier error ClassBody
   48                 | Modifiers . Identifier Identifier ClassBody

    error       shift, and go to state 14
    Identifier  shift, and go to state 15
    Class       shift, and go to state 16
    modifier    shift, and go to state 3

    Modifier  go to state 17


state 9

   36 Modifiers: Modifier .

    $default  reduce using rule 36 (Modifiers)


state 10

   34 TypeDeclaration: ClassDeclaration .

    $default  reduce using rule 34 (TypeDeclaration)


state 11

   43 ClassDeclaration: error Class . Identifier ClassBody
   46                 | error Class . Identifier Super ClassBody

    Identifier  shift, and go to state 18


state 12

    0 $accept: Start "end of file" .
